first part of docs

--- a/docs/2.setting-up-an-initial-application.md
+++ b/docs/2.setting-up-an-initial-application.md
@@ -22,6 +22,14 @@ We will use Spring Initializr to setup our spring boot project.
 Import your project into your editor and validate that is start by running the application (without any errors)
 
 ## Enable GraphiQL
-GraphiQL is an integrated tool that helps us query our API. See it as an integrated Postman. If we want to use it, we need to explicitly enable it.
-Go to you application.properties file and add this line: `spring.graphql.graphiql.enabled=true`. If you did this properly, you can restart your service and go to 
-[GraphiQL](http://localhost:8080/graphiql)
+GraphiQL is an integrated tool that helps us query our API. See it as an integrated Postman. 
+If we want to use it, we need to explicitly enable it. Go to you application.properties file and 
+add this line: `spring.graphql.graphiql.enabled=true`. 
+You'll also need a GraphQL schema file, In you're `src/main/resources` create a directory and file called `graphql/schema.graphqls`
+with the following content:
+```graphql
+type Query {
+    helloWorld: String!
+}
+```
+If you did this properly, you can restart your service and go to [GraphiQL](http://localhost:8080/graphiql)
