--- a/docs/1.intro.md
+++ b/docs/1.intro.md
@@ -4,11 +4,12 @@ sidebar_position: 1
 
 # Summercourse intro
 
-Good to have you at our Building a GraphQL service with Spring Boot.
-These are the docs that with guide you through setting a Spring Boot service. We will build the basic things we just
-discussed during the presentation. The workshop is defined in an example, an exercise and the solution to that exercise.
-Finally, when you finished the workshop, it would be good to transform it to a reactive application. You will find out
-why during the final discussion.
+Good to have you at our "Building a GraphQL service with Spring Boot".
+These are the docs that will guide you through setting a Spring Boot service with the new Spring for GraphQL package. 
+We will build the basics, which we just discussed during the presentation. 
+The workshop is defined in an example, an exercise and the solution to that exercise.
+Finally, when you finished the workshop, it would be good to transform it to a reactive application. 
+You will find out why during the final discussion.
 
 ## Getting Help
 
