--- a/docs/2.setting-up-an-initial-application.md
+++ b/docs/2.setting-up-an-initial-application.md
@@ -6,8 +6,8 @@ sidebar_position: 2
 
 We will use Spring Initializr to setup our spring boot project.
 - Go to the [Spring Initializr](https://start.spring.io/)
-- Chose your Project Dependency Manager of your choice (Maven or Gradle).
-- Chose your Language of choice.
+- Choose your Project Dependency Manager of your choice (Maven or Gradle).
+- Choose your Language of choice.
 - For the Spring Boot version at least 2.7.0 (Spring for GraphQL has just reached 1.0 and is only compatible with versions ^2.7.0).
 - Fill in the Project Metadata as you see fit, but make sure packaging is Jar and the Java version is ^11.
 - On the right-hand side you can see the add dependencies button. You need the following two:
@@ -19,7 +19,7 @@ We will use Spring Initializr to setup our spring boot project.
 
 
 ## Validate
-Import your project into your editor and validate that is start by running the application (without any errors)
+Import your project into your editor and validate that it starts by running the application (without any errors)
 
 ## Enable GraphiQL
 GraphiQL is an integrated tool that helps us query our API. See it as an integrated Postman. 
