--- a/docs/2.setting-up-an-initial-application.md
+++ b/docs/2.setting-up-an-initial-application.md
@@ -25,7 +25,7 @@ Import your project into your editor and validate that it starts by running the 
 GraphiQL is an integrated tool that helps us query our API. See it as an integrated Postman. 
 If we want to use it, we need to explicitly enable it. Go to you application.properties file and 
 add this line: `spring.graphql.graphiql.enabled=true`. 
-You'll also need a GraphQL schema file, In you're `src/main/resources` create a directory and file called `graphql/schema.graphqls`
+You'll also need a GraphQL schema file, In your `src/main/resources` directory, create a new directory and file called `graphql/schema.graphqls`
 with the following content:
 ```graphql
 type Query {
