--- a/docs/tutorial-query/n+1.md
+++ b/docs/tutorial-query/n+1.md
@@ -48,7 +48,7 @@ public record Movie(String imdbId, String title, LocalDate releaseDate) { }
 ```java title="MovieRepository.java"
 @Component
 public class MovieRepository {
-    private final List<Movie> movies = List.newArrayList(
+    private final List<Movie> movies = Lists.newArrayList(
             new Movie("tt0111161", "The Shawshank Redemption", LocalDate.of(1994, 10, 14)),
             new Movie("tt0068646", "The Godfather", LocalDate.of(1972, 3, 24)),
             new Movie("tt0468569", "The Dark Knight", LocalDate.of(2018, 7, 18))
