last update before first workshop

--- a/docs/1.intro.md
+++ b/docs/1.intro.md
@@ -8,6 +8,7 @@ Good to have you at our "Building a GraphQL service with Spring Boot".
 These are the docs that will guide you through setting a Spring Boot service with the new Spring for GraphQL package. 
 We will build the basics, which we just discussed during the presentation. 
 The workshop is defined in an example, an exercise and the solution to that exercise.
+Keep validating your work after every step, the small steps are easier to validate.
 Finally, when you finished the workshop, it would be good to transform it to a reactive application. 
 You will find out why during the final discussion.
 
@@ -18,6 +19,6 @@ Or maybe the person next to you if they are all busy
 
 ### What you'll need
 
-- Java 11+
+- Java 17+ (if you have 11, you can still continue, but you need to replace all record classes with regular classes with constructors and setters)
 - An editor of your choice
 - Internet
