--- a/docs/tutorial-query/n+1.md
+++ b/docs/tutorial-query/n+1.md
@@ -3,11 +3,12 @@ sidebar_position: 7
 ---
 
 # N+1
-There is one huge caveat with GraphQL.  
-Every field in your schema will resolve to a method. We can get an explosive amount of invocations when we are handling 
-relations (in our case Movie --> Actor).  
-Update your code to resemble the understanding code
+There is one huge caveat with GraphQL. Every field in your schema will resolve to a method. We can get an explosive amount of invocations when we are handling 
+relations (in our case Movie --> Actor). Note that we are introducing `repositories`. 
+Repositories are an abstraction that helps us to access data. 
+Our repositories use an in memory data store, but normally this would be a database or API.
 
+Update your code to the code below.
 ```java title="Actor.java"
 public record Actor(String name, LocalDate dateOfBirth, List<String> appearsInIMDBId) {}
 ```
@@ -99,7 +100,7 @@ Restart your service and execute the following query again:
   }
 }
 ```
-While the query gives you an error, the logging of you application shows you the essential part of this.
+While the query might give you an error, the logging of you application shows you the essential part of this.
 It shows that, for every movie it retrieves the actor. It would be better if we can batch the requests, and do one call to the repository.
 We can do that with `@BatchMapping`. Replace the actors method with this one:
 
@@ -113,7 +114,8 @@ public Map<Movie, List<Actor>> actors(List<Movie> movies) {
 ```
 
 If you execute the query again, in your logging you should only see one invocation with all movies that were requested.
-Add the following method to your `ActorsRepository` 
+Add the following method to your `ActorsRepository` to batch the requests:
+
 ```java title="ActorsRepository.java"
 public Map<Movie, List<Actor>> findForMovies(List<Movie> movies) {
     return movies.stream()
