started with persistance

--- a/docs/2.setting-up-an-initial-application.md
+++ b/docs/2.setting-up-an-initial-application.md
@@ -9,12 +9,12 @@ so I took the liberty of preparing a repository that you can fork.
 
 https://github.com/MaikKingma/clean-hexagonal-onion-service
 
-branch: setup
+``Branch: setup-done``
 
 If you checked out this branch then you can proceed to the validation step and skip the optional steps.
 
 
-###OPTIONAL: DO IT YOURSELF
+### OPTIONAL: DO IT YOURSELF
 
 If you feel like you want to do it all yourself you can use Spring Initializr to setup our spring boot project.
 - Go to the [Spring Initializr](https://start.spring.io/)
@@ -34,8 +34,37 @@ If you feel like you want to do it all yourself you can use Spring Initializr to
 ### OPTIONAL: Your config should be something like this:
 ![spring-initializr.png](spring-initializr.png)
 
-## OPTIONAL: Create the clean hexagonal onion folder structure
+### OPTIONAL: Create the clean hexagonal onion folder structure
 ![package-structure.png](package-structure.png)
+
+### OPTIONAL: Database
+add these lines to ``src/main/resources/application.properties``
+
+```yaml
+# DataSource
+spring.datasource.url=jdbc:postgresql://localhost:5432/clean-hexagonal-onion-service
+spring.datasource.username=postgres
+spring.datasource.password=postgres
+```
+
+and create a ``./docker-compose.yml`` file and paste this content into it:
+```yaml
+version: '3.1'
+
+services:
+  postgres:
+    image: postgres
+    restart: always
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: postgres
+      POSTGRES_DB: clean-hexagonal-onion-service
+    ports:
+      - "5432:5432"
+    network_mode: "bridge"
+```
+Now run the docker-compose script from the IDE or from the terminal with ``docker-compose up``.
+Last but not least to avoid errors for now please comment out the liquibase dependency in your ``./pom.xml``.
 
 ## Validate
 Import your project into your IDE and validate that it starts by running the application (without any errors)
