fninshed persistance, added query authors

--- a/docs/2.setting-up-an-initial-application.md
+++ b/docs/2.setting-up-an-initial-application.md
@@ -40,7 +40,7 @@ If you feel like you want to do it all yourself you can use Spring Initializr to
 ### OPTIONAL: Database
 add these lines to ``src/main/resources/application.properties``
 
-```yaml
+```properties
 # DataSource
 spring.datasource.url=jdbc:postgresql://localhost:5432/clean-hexagonal-onion-service
 spring.datasource.username=postgres
