--- a/docs/3.getting-to-know-the-domain.md
+++ b/docs/3.getting-to-know-the-domain.md
@@ -21,7 +21,7 @@ from it is the identifier of the publisher, which we will need in order to ident
 ```
 POST /authors/commands/register
 POST /authors/{id}/commands/writeBook
-GET /authors?lastName
+GET /authors
 
 GET /books?title
 POST /books/{id}/commands/publish
