--- a/docs/7-n+1.md
+++ b/docs/7-n+1.md
@@ -291,6 +291,6 @@ Hope all worked out for you! Once again:
 if (allTestsGreen == true) {
     log.info("DONE! Let's move on to the next topic: The ACL adapter")}
 else{
-    log.error("Sout for help!") || (git stash && git checkout 7-n+1-done)
+    log.error("Shout for help!") || (git stash && git checkout 7-n+1-done)
 }
 ```
