--- a/docs/1.intro.md
+++ b/docs/1.intro.md
@@ -22,3 +22,17 @@ Or maybe the person next to you if all codecentric people are very busy helping 
 - Docker
 - An IDE of your choice (ideally IntelliJ)
 - an Internet connection
+
+### Time management
+There are 6 implementation chapters in total. They become increasingly more complex and less guided.
+Try not to spend more than 20 minutes on each chapter if you want to have a look at everything.
+At the end of each section there is a git branch reference with which you can continue to the next chapter:
+
+Example:
+```javascript
+if (allTestsGreen == true) {
+    log.info("DONE! Let's move on to the next topic: XXX")}
+else{
+    log.error("Shout for help!") || (git stash && git checkout 5-persist-author-data-done)
+}
+```
