--- a/docs/7-n+1.md
+++ b/docs/7-n+1.md
@@ -207,6 +207,12 @@ class BookQueriesTest {
     @Autowired
     private EntityManager entityManager;
 
+    @BeforeEach
+    void beforeEach() {
+        bookRepository.deleteAll();
+        bookRepository.flush();
+    }
+
     @Test
     @Transactional
     void shouldFindBooksWithNoQueryParam() throws Exception {
