--- a/docs/1.intro.md
+++ b/docs/1.intro.md
@@ -3,30 +3,27 @@ sidebar_position: 1
 ---
 
 # Expert Workshop Intro
-
-Good to have you at our "DDD and "clean hexagonal onion" architecture with Spring" workshop.
-These docs will provide you with a step by step guide.
+Good to have you at our **"DDD and 'clean hexagonal onion' architecture with Spring"** workshop.
+These docs will provide you with a step-by-step guide.
 
 Keep validating your work after every step, the small steps are easier to validate.
 In case you got stuck somewhere, feel free to continue the workshop on a code base from one of the prepared branches 
 that provide you the solution of each phase.
 
 ## Getting Help
-
 Look for someone with a **codecentric shirt**.
 Or maybe the person next to you if all codecentric people are very busy helping others.
 
 ### What you'll need
-
 - Java 17
 - Docker
 - An IDE of your choice (ideally IntelliJ)
 - an Internet connection
 
 ### Time management
-There are 6 implementation chapters in total. They become increasingly more complex and less guided.
+There are 6 implementation chapters in total. They become increasingly complex and less guided.
 Try not to spend more than 20 minutes on each chapter if you want to have a look at everything.
-At the end of each section there is a git branch reference with which you can continue to the next chapter:
+At the end of each section, there is a git branch reference with which you can continue to the next chapter:
 
 Example:
 ```javascript
@@ -36,3 +33,8 @@ else{
     log.error("Shout for help!") || (git stash && git checkout 5-persist-author-data-done)
 }
 ```
+
+### Side note
+The purpose of this workshop is to get to know the clean hexagonal onion pattern together with a flavour of DDD in 
+Spring. I do not intend to have full test coverage in this project, instead only validate the happy flow with an 
+integration test or two.
