--- a/docs/2.setting-up-an-initial-application.md
+++ b/docs/2.setting-up-an-initial-application.md
@@ -4,14 +4,15 @@ sidebar_position: 2
 
 # Check out the Spring service
 
-Setting up the project from scratch would take away too much time and focus from the important content of this workshop 
-so I took the liberty of preparing a repository that you can fork.
+Setting up the project from scratch would take up too much time and focus away from the important content of this 
+workshop. Hence, I took the liberty of preparing a repository that you can fork or clone.
 
-https://github.com/MaikKingma/clean-hexagonal-onion-service
+(Button to GitHub in the header menu up top or c&p this link: https://github.com/MaikKingma/clean-hexagonal-onion-service)
 
-``Branch: setup-done``
+Checkout this branch:
+``git checkout setup-done``
 
-If you checked out this branch then you can proceed to the validation step and skip the optional steps.
+If you checked out this branch then you can proceed to the validation step and skip the following optional steps.
 
 
 ### OPTIONAL: DO IT YOURSELF
@@ -64,10 +65,10 @@ services:
     network_mode: "bridge"
 ```
 Now run the docker-compose script from the IDE or from the terminal with ``docker-compose up``.
-Last but not least to avoid errors for now please comment out the liquibase dependency in your ``./pom.xml``.
+Last but not least, in order to avoid errors for now, please comment out the liquibase dependency in your ``./pom.xml``.
 
 ## Validate
-Import your project into your IDE and validate that it starts by running the application (without any errors)
+Import your project into your IDE and validate that it starts by running the application (without any errors).
 
 
 
