--- a/docs/3.getting-to-know-the-domain.md
+++ b/docs/3.getting-to-know-the-domain.md
@@ -3,15 +3,15 @@ sidebar_position: 3
 ---
 
 # Getting to know the domain
-
-We will be building a simple service where we can register book authors and let them write books and eventually 
-publish them. The publishers though will not be part of our bounded context and we will need to retrieve any 
-information about publishers from the publisher API.
+We will be building a simple service, where we can register book authors, let them write books and eventually 
+publish them. The publishers though will not be part of our bounded context, and we will need to retrieve any 
+information about them from an external publisher API (https://github.com/MaikKingma/publisher-service).
 
 In our domain model we have identified two aggregates: Author and Book.
-A publisher is information from another bounded context. It might change and we have no control over it as such. 
-That is why we make it an immutable value object that is not persisted to our database. The only thing we need to know 
-from it is the identifier of the publisher, which we will need in order to identify the publisher of a book.
+A publisher is information from another bounded context. It might change over time, and we have no control over it as such. 
+That is why we make it an immutable value object in our context, that is not persisted to our database. The only 
+thing we need to know from a publisher, is the identifier of the publisher. We will need it in order to identify the 
+publisher of a book.
 
 ### Domain Diagram
 ![domain-model.png](domain-model.png)
