--- a/docs/7-n+1.md
+++ b/docs/7-n+1.md
@@ -5,9 +5,9 @@ sidebar_position: 8
 # N+1 - Do it yourself
 
 Back to school ;P . You learn the theory, then you apply it to something new.
-What would Authors be without books. Remember our domain model and API spec:
+What would authors be without books! (Maybe bloggers, but anyways...) Remember our domain model and API spec:
 
-### Domain Diagram
+### Domain Model Diagram
 ![domain-model.png](domain-model.png)
 
 ### The API
@@ -20,12 +20,12 @@ GET /authors
 POST /authors/{id}/commands/writeBook
 GET /books?title
 
-### TODO in ACL later on
+### TODO in upcoming ACL section
 POST /books/{id}/commands/publish
 ```
 
 ### The assignment
-Your new assignment is to enable Authors to write a book. Try to find out which steps you need to take in order to 
+Your new assignment is to enable authors to write a book. Try to find out which steps you need to take in order to 
 do so. Try to backtrace the steps we have taken so far.
 
 To not get hung up on Database evolution, here is the liquibase script you will need:
@@ -107,7 +107,7 @@ code accordingly.
 
 Now try to complete the rest!
 
-...Some things to watch our for
+### Some things to watch our for
 
 * Remember that an entity in DDD is not the same as an entity in the DB sense. So the OneToMany and ManyToOne relation 
   annotations need to be placed on the JPA data model classes only.
@@ -123,9 +123,9 @@ and
     private AuthorJPA author;
 ```
 
-**GOOD LUCK!**
+**Expert tip:** If you are stuck, maybe try some TDD with the help of the Validate paragraph?
 
-... 
+**GOOD LUCK!**
 
 ### Validate
 
