make docker compose not optional

--- a/docs/2.setting-up-an-initial-application.md
+++ b/docs/2.setting-up-an-initial-application.md
@@ -63,11 +63,11 @@ services:
       - "5432:5432"
     network_mode: "bridge"
 ```
-Now run the docker-compose script from the IDE or from the terminal with ``docker-compose up``.
-Last but not least, in order to avoid errors for now, please comment out the liquibase dependency in your ``./pom.xml``.
 
 ## Validate
-Import your project into your IDE and validate that it starts by running the application (without any errors).
+Run the docker-compose script from the IDE or from the terminal with ``docker-compose up --build``.
+Last but not least, in order to avoid errors for now, please comment out the liquibase dependency in your ``./pom.xml``.
+Validate that the Spring application starts by running the application (without any errors).
 
 
 
