Updated Docs Styling to the/experts CI and updated intro

--- a/docs/2.setting-up-an-initial-application.md
+++ b/docs/2.setting-up-an-initial-application.md
@@ -12,8 +12,8 @@ workshop. Hence, I took the liberty of preparing a repository that you can fork 
 Checkout this branch:
 ``git checkout setup-done``
 
-If you checked out this branch then you can proceed to the validation step and skip the following optional steps.
-
+If you checked out this branch then you can proceed to the validation step and skip the following _**OPTIONAL**_ steps.
+(there are still some mandatory steps after the optional ones)
 
 ### OPTIONAL: DO IT YOURSELF
 
