--- a/docs/3.getting-to-know-the-domain.md
+++ b/docs/3.getting-to-know-the-domain.md
@@ -14,7 +14,7 @@ thing we need to know from a publisher, is the identifier of the publisher. We w
 publisher of a book.
 
 ### Domain Diagram
-![domain-model.png](domain-model.png)
+![domain-model.png](domain-model.jpg)
 
 ### The API
 
