--- a/docs/1.intro.md
+++ b/docs/1.intro.md
@@ -3,29 +3,24 @@ sidebar_position: 1
 ---
 
 # Expert Workshop Intro
-Good to have you at our **"DDD and 'clean hexagonal onion' architecture with Spring"** workshop.
-These docs will provide you with a step-by-step guide.
+Welcome to the **Clean hexagonal onion with a Dash of DDD in Spring** workshop at Javaland 2023.
+My name is Maik Kingma, and I will be your coach for today. Since I cannot be with everyone simultaneously, 
+these docs will provide you with a step-by-step guide.
 
-Keep validating your work after every step, the small steps are easier to validate.
-In case you got stuck somewhere, feel free to continue the workshop on a code base from one of the prepared branches 
-that provide you the solution of each phase.
+Keep validating your work after every chapter.
+In case you get stuck somewhere along the way, you can always continue the workshop on a code base snapshot from
+one of the prepared branches that provide you the solution of each chapter.
 
 ## Getting Help
-Look for someone with a **codecentric shirt**.
-Or maybe the person next to you if all codecentric people are very busy helping others.
-
-### What you'll need
-- Java 17
-- Docker
-- An IDE of your choice (ideally IntelliJ)
-- an Internet connection
+I will do my best to answer all the questions. We will have sync moments regularly throughout the workshop, where we can
+discuss questions together.
 
 ### Time management
-There are 6 implementation chapters in total. They become increasingly complex and less guided.
-Try not to spend more than 20 minutes on each chapter if you want to have a look at everything.
-At the end of each section, there is a git branch reference with which you can continue to the next chapter:
+There are 6 implementation chapters in total. They become increasingly complex.
+At the end of each section, there is a git branch reference with which you can continue to the next chapter,
+in case you got stuck.
 
-Example:
+#### Example:
 ```javascript
 if (allTestsGreen == true) {
     log.info("DONE! Let's move on to the next topic: XXX")}
@@ -34,7 +29,13 @@ else{
 }
 ```
 
+### What you will need
+- JDK 17
+- Docker Desktop
+- An IDE of your choice (ideally IntelliJ)
+- an Internet connection
+
 ### Side note
-The purpose of this workshop is to get to know the clean hexagonal onion pattern together with a flavour of DDD in 
-Spring. I do not intend to have full test coverage in this project, instead only validate the happy flow with an 
-integration test or two.
+The purpose of this workshop is to get to know the Clean Hexagonal Onion pattern and how to apply it in combination with
+some DDD in a Spring Boot application. I do not intend to have full test coverage in this project. Instead, the provided
+unit-tests test the happy flow, paired with an occasional integration test or two.
