updated for javaland

--- a/docs/1.intro.md
+++ b/docs/1.intro.md
@@ -2,18 +2,16 @@
 sidebar_position: 1
 ---
 
-# Expert Workshop Intro
+# Workshop Intro
 Welcome to the **Clean hexagonal onion with a Dash of DDD in Spring** workshop at Javaland 2023.
 My name is Maik Kingma, and I will be your coach for today. Since I cannot be with everyone simultaneously, 
 these docs will provide you with a step-by-step guide.
 
-Keep validating your work after every chapter.
-In case you get stuck somewhere along the way, you can always continue the workshop on a code base snapshot from
-one of the prepared branches that provide you the solution of each chapter.
-
 ## Getting Help
 I will do my best to answer all the questions. We will have sync moments regularly throughout the workshop, where we can
-discuss questions together.
+discuss questions together. Keep validating your work after every chapter.
+In case you get stuck somewhere along the way, you can always continue the workshop on a code base snapshot from
+one of the prepared branches that provide you the solution of each chapter.
 
 ### Time management
 There are 6 implementation chapters in total. They become increasingly complex.
@@ -34,6 +32,11 @@ else{
 - Docker Desktop
 - An IDE of your choice (ideally IntelliJ)
 - an Internet connection
+
+### TDD
+If you want there is the possibility to do Test Driven Development. At the end of each chapter you
+will find a happy flow unit test, in some cases also an integration test.
+You can use these to do TDD.
 
 ### Side note
 The purpose of this workshop is to get to know the Clean Hexagonal Onion pattern and how to apply it in combination with
