--- a/docs/2.setting-up-an-initial-application.md
+++ b/docs/2.setting-up-an-initial-application.md
@@ -7,18 +7,21 @@ sidebar_position: 2
 Setting up the project from scratch would take up too much time and focus away from the important content of this 
 workshop. Hence, I took the liberty of preparing a repository that you can fork or clone.
 
-(Button to GitHub in the header menu up top or c&p this link: https://github.com/MaikKingma/clean-hexagonal-onion-service)
+Button to GitHub is located in the header menu. Alternatively, click 
+[here](https://github.com/MaikKingma/javaland-clean-hexagonal-onion).
 
-Checkout this branch:
-``git checkout setup-done``
+You can either check out the prepared setup branch or, optionally set the project up yourself.
+
+```git checkout setup-done```
 
 If you checked out this branch then you can proceed to the validation step and skip the following _**OPTIONAL**_ steps.
-(there are still some mandatory steps after the optional ones)
+(there are still some mandatory steps after the optional ones). If you chose to set up the project yourself,
+ please follow the **_OPTIONAL_** steps.
 
 ### OPTIONAL: DO IT YOURSELF
 
 If you feel like you want to do it all yourself you can use Spring Initializr to setup our spring boot project.
-- Go to the [Spring Initializr](https://start.spring.io/)
+- Go to the [Spring Initializr](https://bit.ly/javaland-spring-init)
 - Choose your Project Dependency Manager of your choice (Maven or Gradle).
 - Choose your Language of choice.
 - For the Spring Boot version at least 2.7.0.
@@ -49,7 +52,7 @@ spring.datasource.password=postgres
 
 and create a ``./docker-compose.yml`` file and paste this content into it:
 ```yaml
-version: '3.1'
+version: '3.9'
 
 services:
   postgres:
@@ -60,15 +63,23 @@ services:
       POSTGRES_PASSWORD: postgres
       POSTGRES_DB: clean-hexagonal-onion-service
     ports:
-      - "5432:5432"
-    network_mode: "bridge"
+      - '5432:5432'
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -d $${POSTGRES_DB} -U $${POSTGRES_USER}"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
 ```
 
 ## Validate
-Run the docker-compose script from the IDE or from the terminal with ``docker-compose up --build``.
+Run the docker-compose script from the IDE or from the terminal with ``docker compose up --build``.
 Last but not least, in order to avoid errors for now, please comment out the liquibase dependency in your ``./pom.xml``.
+
+> You may have to enable annotation processing in your IDE for the Lombok dependency.
+
 Validate that the Spring application starts by running the application (without any errors).
+similar to this:
+![package-structure.png](spring-first-run.png)
 
-
-
+All green? Well done! We are now ready to move on to the next chapter.
 
