--- a/docs/1.intro.md
+++ b/docs/1.intro.md
@@ -2,43 +2,17 @@
 sidebar_position: 1
 ---
 
-# Workshop Intro
-Welcome to the **Clean hexagonal onion with a Dash of DDD in Spring** workshop at Javaland 2023.
-My name is Maik Kingma, and I will be your coach for today. Since I cannot be with everyone simultaneously, 
-these docs will provide you with a step-by-step guide.
+# Introductie
+Welkom bij de AI workshop "BDD met ChatGPT" In deze workshop gaan we applicatie(s) bouwen aan de hand van requirements met BDD en ChatGPT.
 
-## Getting Help
-I will do my best to answer all the questions. We will have sync moments regularly throughout the workshop, where we can
-discuss questions together. Keep validating your work after every chapter.
-In case you get stuck somewhere along the way, you can always continue the workshop on a code base snapshot from
-one of the prepared branches that provide you the solution of each chapter.
+Veel plezier!
 
-### Time management
-There are 6 implementation chapters in total. They become increasingly complex.
-At the end of each section, there is a git branch reference with which you can continue to the next chapter,
-in case you got stuck.
+## Wat heb je nodig
+- [ChatGPT](https://chat.openai.com/auth/login)
+- Je favoriete IDE
 
-#### Example:
-```javascript
-if (allTestsGreen == true) {
-    log.info("DONE! Let's move on to the next topic: XXX")}
-else{
-    log.error("Shout for help!") || (git stash && git checkout 5-persist-author-data-done)
-}
-```
+## Wat haal jij hieruit?
+- Kennis om dit morgen direct toe te passen in je opdracht.
 
-### What you will need
-- JDK 17
-- Docker Desktop
-- An IDE of your choice (ideally IntelliJ)
-- an Internet connection
-
-### TDD
-If you want there is the possibility to do Test Driven Development. At the end of each chapter you
-will find a happy flow unit test, in some cases also an integration test.
-You can use these to do TDD.
-
-### Side note
-The purpose of this workshop is to get to know the Clean Hexagonal Onion pattern and how to apply it in combination with
-some DDD in a Spring Boot application. I do not intend to have full test coverage in this project. Instead, the provided
-unit-tests test the happy flow, paired with an occasional integration test or two.
+## Hulp nodig?
+Wanneer je hulp nodig hebt vraag om hulp bij iemand met een **The/experts shirt**. 
