Eerste opzet voor de opdrachten

--- a/docs/1.intro.md
+++ b/docs/1.intro.md
@@ -3,12 +3,13 @@ sidebar_position: 1
 ---
 
 # Introductie
-Welkom bij de AI workshop "BDD met ChatGPT" In deze workshop gaan we applicatie(s) bouwen aan de hand van requirements met BDD en ChatGPT.
+Welkom bij de AI workshop "BDD met AI" In deze workshop gaan we applicatie(s) bouwen aan de hand van requirements met BDD en ChatGPT en Github Copilot.
 
 Veel plezier!
 
 ## Wat heb je nodig
 - [ChatGPT](https://chat.openai.com/auth/login)
+- [Github Copilot](https://github.com/features/copilot)
 - Je favoriete IDE
 
 ## Wat haal jij hieruit?
