Toevoegen van opdracht 1.3

--- a/docs/2.opdracht1.md
+++ b/docs/2.opdracht1.md
@@ -32,7 +32,7 @@ Nu je een Cucumber file hebt, kan je een bestand aan maken in je IDE onder de fo
       - features
         - my_feature.feature
 ```
-Vervolgens kan je in je `src/test/java/com/example/Calculator` een bestand aanmaken waarin de verschillende stappen van het cucumber bestand beschreven worden met de juist java code er bij.
+Vervolgens kan je in je `src/test/java/com/example/calculator` een bestand aanmaken waarin de verschillende stappen van het cucumber bestand beschreven worden met de juist java code er bij.
 
 Dan gaan we nu aan de slag met Github Copilot. Github Copilot is ook een language model net als ChatGPT, echter is Copilot meer gebaseert op code completion dan voor teksten schrijven.
 Het mooie aan Copilot is dat je het op verschillende manieren kan gebruiken. Je kan een stuk code schrijven die afgemaakt wordt door Copilot, maar je kan ook in een regel comentaar neerzetten wat voor functionaliteit wilt hebben en dan kan Copilot dit ook genereren.
@@ -40,5 +40,14 @@ Copilot kan ook context van een project meenemen in het genereren van de code. Z
 
 Om de juiste stepfile te genereren maak een commentaar regel aan binnen de class die je net hebt aangemaakt.
 `// Create the methods for the my_feature.feature file`. Vervolgens kan je door op `Tab` te drukken de code accepteren.
+
+Het is ook mogelijk dat de code niet correct is, dan kan je via de Github Copilot extension andere versies van de code vinden.
+![img.png](../static/img/img.png)
+
+## Opdracht 1.3
+Zodra je de test code hebt geschreven kan je een nieuw bestand aanmaken voor de Calculator code.
+Dit kan je ook doen aan de hand van Github Copilot. Maak een bestand aan onder het pad `src/main/java/com/examples/calculator` genaamd `Calculator.java`.
+Geef aan in het commentaar `// Create the calculator methods used in the test`. Dit moet er voor zorgen dat de code gegenereerd word.
+
 
 
