Aanpassen van opdracht 1 om alleen gebruik te maken met ChatGPT

--- a/docs/1.intro.md
+++ b/docs/1.intro.md
@@ -8,8 +8,9 @@ Welkom bij de AI workshop "BDD met AI" In deze workshop gaan we applicatie(s) bo
 Veel plezier!
 
 ## Wat heb je nodig
-- [ChatGPT](https://chat.openai.com/auth/login)
-- [Github Copilot](https://github.com/features/copilot)
+- [ChatGPT (Pro)](https://chat.openai.com/auth/login)
+
+[//]: # (- [Github Copilot]&#40;https://github.com/features/copilot&#41;)
 - Je favoriete IDE
 
 ## Wat haal jij hieruit?
