--- a/docs/3.opdracht2.md
+++ b/docs/3.opdracht2.md
@@ -3,3 +3,8 @@ sidebar_position: 3
 ---
 
 # Opdracht 2
+In de tweede opdracht gaan we proberen om de calculator uit te bereiden met 5 nieuwe testcases. Hierdoor kan je ondervinden hoe het is om nieuwe testcases toe te voegen in een bepaalde context aan de hand van AI.
+We gaan een nieuwe ChatGPT instantie openen. Op deze manier kunnen we simuleren hoe het is om zonder context te een test uit te bereiden.
+
+In ChatGPT, druk op "New Chat". Kopieer de test cases die net gegeneerd zijn en plak deze in ChatGPT en vraag ChatGPT om nog 5 test cases te genereren.
+
