--- a/docs/1.intro.md
+++ b/docs/1.intro.md
@@ -3,18 +3,26 @@ sidebar_position: 1
 ---
 
 # Introductie
-Welkom bij de AI workshop "BDD met AI" In deze workshop gaan we applicatie(s) bouwen aan de hand van requirements met BDD en ChatGPT en Github Copilot.
+Welkom bij de workshop "BDD met ChatGPT". In deze workshop leer je hoe je AI kunt inzetten in Behaviour-Driven Development. We werken een klantcase uit zodat de praktische toepasbaarheid duidelijk wordt en je de opgedane kennis direct kunt toepassen bij je klant of project. Met behulp van ChatGPT optimaliseren we de requirements, werken dit vervolgens uit naar testcases en tot slot een werkende applicatie, zonder dat je een ervaren developer hoeft te zijn. Waarom zou je AI willen gebruiken in je project? Hoe communiceer je dit naar je opdrachtgever? Hoe kan je AI efficiënt inzetten? In deze workshop leer je hoe je als testexpert of DevOps engineer AI effectief kunt inzetten in je project.
+
+## Wat is BDD?
+Regelmatig lees of hoor je dat IT-projecten falen, een langere doorlooptijd nodig hebben dan oorspronkelijk gepland en veel meer kosten dan oorspronkelijk gedacht. De oorzaken hiervoor zijn veelal te herleiden naar communicatieproblemen zoals:
+
+- De business is niet in staat om het gewenste gedrag eenduidig te benoemen.
+- De ontwikkelaars begrijpen niet wat het gewenste gedrag is dat ze moeten ontwikkelen.
+- De business begrijpt niet welke technische uitdagingen het gewenste gedrag met zich meebrengt.
+
+Het primaire doel van BDD is om mensen te laten communiceren en de kloof te dichten tussen ’technische’ en ‘business’ mensen. BDD zorgt voor communicatie tussen iemand met diepgaande technische kennis, iemand met een grondige business kennis en een professionele tester. Door deze verschillende stakeholders de functionaliteit te laten bespreken, de problemen te bespreken en te praten over hoe ze deze kunnen oplossen, zal leiden tot specificaties die door alle stakeholders op dezelfde wijze wordt begrepen.
 
 Veel plezier!
 
 ## Wat heb je nodig
 - [ChatGPT (Pro)](https://chat.openai.com/auth/login)
 
-[//]: # (- [Github Copilot]&#40;https://github.com/features/copilot&#41;)
-- Je favoriete IDE
+- [Intellij](https://www.jetbrains.com/idea/download/download-thanks.html?platform=windows&code=IIC)
 
 ## Wat haal jij hieruit?
 - Kennis om dit morgen direct toe te passen in je opdracht.
 
 ## Hulp nodig?
-Wanneer je hulp nodig hebt vraag om hulp bij iemand met een **The/experts shirt**. 
+Wanneer je hulp nodig hebt vraag om hulp bij iemand met een **the/experts shirt**. 
