toevoegen van opdracht 2

--- a/docs/3.opdracht2.md
+++ b/docs/3.opdracht2.md
@@ -3,8 +3,43 @@ sidebar_position: 3
 ---
 
 # Opdracht 2
-In de tweede opdracht gaan we proberen om de calculator uit te bereiden met 5 nieuwe testcases. Hierdoor kan je ondervinden hoe het is om nieuwe testcases toe te voegen in een bepaalde context aan de hand van AI.
-We gaan een nieuwe ChatGPT instantie openen. Op deze manier kunnen we simuleren hoe het is om zonder context te een test uit te bereiden.
+In de tweede opdracht ga je aan de slag om een wat gecompliceerd te genereren. We gaan eerst beginnen met aanmaken van een nieuw project. Doe dat op de zelfde manier als in opdracht 1.
 
-In ChatGPT, druk op "New Chat". Kopieer de test cases die net gegeneerd zijn en plak deze in ChatGPT en vraag ChatGPT om nog 5 test cases te genereren.
+
+
+## opdracht 2.1
+Als je een project hebt aangemaakt kan je aan ChatGPT vragen of deze een cucumber bestand kan genereren.
+Hiervoor zijn de volgende requirements op gezet:
+
+I have an api on localhost:8080
+I want a Book object
+I want a list of Book objects
+I want to create a book with a title, author, isbn and price
+I want to get a book by the isbn
+I want to get a list of books
+I want to delete a book
+I want to edit a book
+
+Als je het bestand hebt gekregen, kan je deze op de zelfde locatie binnen je project plaatsen zoals je hiervoor in opdracht 1 ook hebt gedaan, dus in de folder:
+```
+- src
+  - test
+    - java
+    - resources
+      - features
+        - bookstoreAPI.feature
+```
+
+## Opdracht 2.2
+Ook bij deze cucumber file heb je een step file nodig. Deze kan je ook laten genereren door ChatGPT. 
+Let op, het kan zijn dat het bestand te lang wordt voor ChatGPT, hierdoor zal deze afgekapt worden. Vraag dan aan ChatGPT of deze het bestand af kan maken.
+
+Plaats dit bestand in de folder `src/test/java/com/example/bookstoreAPI`. 
+Je zal wellicht tegen het probleem aan lopen dat de methodes niet helemaal kloppen. Dit is dan ook een grote valkuil van AI op dit moment.
+AI kan voor een groot gedeelte helpen bij het maken van code, echter is het niet 100% perfect en hierdoor zal je alsnog een deel van het debuggen zelf moeten doen.
+Gelukkig kan ChatGPT je hier ook weer een deel bij helpen. 
+Als de java code niet helemaal correct is kan je de foutmelding kopieren en de vraag stellen aan ChatGPT of hij de methode waar het fout gaat op nieuw kan genereren rekening houdend met de foutmelding die je krijgt.
+
+
+In de volgende opdracht gaan we proberen aan de hand van je cucumber file en step file de API te genereren.
 
