--- a/docs/2.voorbereidingen.md
+++ b/docs/2.voorbereidingen.md
@@ -12,6 +12,8 @@ sidebar_position: 2
 
 Weet je niet hoe je Maven installeert volg dan de stappen in de [link](https://phoenixnap.com/kb/install-maven-windows)
 
+Reboot je laptop zodat je zeker weet dat maven goed is geïnstalleerd. Als je dit niet doet kan het zijn dat maven niet herkent wordt.
+
 ##  Plugins in Intellij installeren
 - Gherkin
 - Cucumber for java 
