--- a/docs/3.opdracht1.md
+++ b/docs/3.opdracht1.md
@@ -2,37 +2,28 @@
 sidebar_position: 3
 ---
 
-# Opdracht 1
+# Opdracht 1: Rekenmachine
+Als eerste opdracht gaan we een rekenmachine maken dit doen we natuurlijk door gebruik te maken van ChatGPT.
 
-##  Opdracht 1.1
+Gegeven zijn de volgende vier requirements:
 
-Deze scenario's zijn ook direct de acceptatiecriteria en zijn bedoeld om de functionele vereisten van het systeem te verduidelijken en te valideren.
-Een belangrijk kenmerk van BDD is het gebruik van hulpmiddelen zoals Cucumber en Gherkin, die het mogelijk maken om de scenario's in een leesbare en begrijpelijke taal te schrijven. 
-Dit maakt het gemakkelijker voor teamleden met verschillende achtergronden om samen te werken en te communiceren over de verwachte gedragingen van het systeem.
+- Optellen: de rekenmachine moet een methode bieden om twee of meer getallen bij elkaar op te tellen, met ondersteuning voor decimalen en negatieve waarden.
 
-In deze frameworks kan je rechtstreeks handelingen uitschrijven in leesbare zinnen die omschrijven wat de gebruiker doet.
-Een voorbeeld van een Cucumber file ziet er uit als voort:
+- Aftrekken: de rekenmachine moet een methode bevatten om het ene getal van het andere af te trekken, inclusief decimalen en negatieve waarden.
+
+- Vermenigvuldiging: de rekenmachine moet een methode bieden om twee of meer getallen met elkaar te vermenigvuldigen, waarbij decimalen en negatieve waarden worden ondersteund.
+
+- Delen: de rekenmachine moet een methode bevatten om het ene getal door het andere te delen, met ondersteuning voor decimalen en het omgaan met deling door nul-fouten.
+
+##  1.1 Maak een feature file van de requirements.
+
+Een voorbeeld van een feature file ziet er uit als volgt:
 ```
 Scenario: Scenarionaam
     Given I have two slices of pizza
     When I eat one slice
     Then there is only one slice left
 ```
-Hierin wordt beschreven hoe het gedrag van een gebruiker is als deze een som wil maken in een rekenmachine met de verwachte uitkomst.
-
-ChatGPT is een chatbot ontwikkelt door OpenAI op basis van het model GPT-3.5. Dit is momenteel een van de grootste/krachtigste AI language modellen die er bestaan op het moment. Een language model is een algoritme dat in feite alles wat betreft taal kan begrijpen.
-Start je met een nieuw project? Dan heeft ChatGPT geen context nodig. Heb je al een project maar wil je dit uitbereiden met nieuwe testcases? Dan heb je wel wat context nodig. Dit komt verder op in de workshop naar boven.
-
-Het doel is voor de eerste opdracht is om 10 test cases te laten genereren aan de hand van de 10 requirements hieronder:
-
-..
-..
-..
-
-Hint: Geef aan welke taal je gebruikt en geef de requirements aan.
-
-Oplossing: "Geef een cucumber file met deze requirements: .. .. .."
-
 Nu je een Cucumber file hebt, kan je een bestand aan maken in je IDE onder de folder in je Maven project:
 ```
 - src
@@ -42,11 +33,10 @@ Nu je een Cucumber file hebt, kan je een bestand aan maken in je IDE onder de fo
       - features
         - calculator.feature
 ```
-
-## Opdracht 1.2
+## 1.2 Maak een step file aan
 Vervolgens kan je in `src/test/java/com/example/calculator` een bestand aanmaken genaamd `CalculatorSteps.java` waarin de verschillende stappen van het cucumber bestand beschreven worden met de juist step file code er bij.
 
-Een step file in Cucumber is een bestand dat de implementatie van de stappen beschrijft die in een Gherkin scenario zijn gedefinieerd.
+Een step file in Cucumber is een bestand dat de implementatie van de stappen beschrijft die in een scenario zijn gedefinieerd.
 
 De step file koppelt de stappen uit de Gherkin scenario's aan de daadwerkelijke code die moet worden uitgevoerd om de tests te draaien. 
 In een step file worden de stappen geïmplementeerd met behulp van methoden die overeenkomen met de beschrijvingen van de stappen in het Gherkin scenario.
