--- a/docs/4.opdracht2.md
+++ b/docs/4.opdracht2.md
@@ -2,7 +2,7 @@
 sidebar_position: 3
 ---
 
-# Opdracht 2
+# Opdracht 2: Bookstore
 In de tweede opdracht ga je aan de slag om een wat gecompliceerd te genereren. We gaan eerst beginnen met aanmaken van een nieuw project. Doe dat op de zelfde manier als in opdracht 1.
 
 
