--- a/docs/5.opdracht3.md
+++ b/docs/5.opdracht3.md
@@ -2,5 +2,5 @@
 sidebar_position: 3
 ---
 
-# Opdracht 3
+# Opdracht 3: Micronaut Application
 In deze opdracht gaan we aan de hand van Micronaut de Bookstore API opzetten.
