--- a/docs/1.intro.md
+++ b/docs/1.intro.md
@@ -21,6 +21,10 @@ Veel plezier!
 
 - [Intellij](https://www.jetbrains.com/idea/download/download-thanks.html?platform=windows&code=IIC)
 
+- Java
+ 
+- Maven
+
 ## Wat haal jij hieruit?
 - Kennis om dit morgen direct toe te passen in je opdracht.
 
