--- a/docs/4.opdracht2.md
+++ b/docs/4.opdracht2.md
@@ -3,11 +3,9 @@ sidebar_position: 3
 ---
 
 # Opdracht 2: Bookstore
-In de tweede opdracht ga je aan de slag om een wat gecompliceerd te genereren. We gaan eerst beginnen met aanmaken van een nieuw project. Doe dat op de zelfde manier als in opdracht 1.
+In de tweede opdracht ga je aan de slag om een wat gecompliceerdere applicatie te genereren. We gaan eerst beginnen met aanmaken van een nieuw project. Doe dat op de zelfde manier als in opdracht 1.
 
-
-
-## opdracht 2.1
+## 2.1 Feature file
 Als je een project hebt aangemaakt kan je aan ChatGPT vragen of deze een cucumber bestand kan genereren.
 Hiervoor zijn de volgende requirements op gezet:
 
@@ -30,7 +28,7 @@ Als je het bestand hebt gekregen, kan je deze op de zelfde locatie binnen je pro
         - bookstoreAPI.feature
 ```
 
-## Opdracht 2.2
+## 2.2 Stepfile
 Ook bij deze cucumber file heb je een step file nodig. Deze kan je ook laten genereren door ChatGPT. 
 Let op, het kan zijn dat het bestand te lang wordt voor ChatGPT, hierdoor zal deze afgekapt worden. Vraag dan aan ChatGPT of deze het bestand af kan maken.
 
