--- a/docs/3.opdracht1.md
+++ b/docs/3.opdracht1.md
@@ -34,59 +34,47 @@ Nu je een Cucumber file hebt, kan je een bestand aan maken in je IDE onder de fo
         - calculator.feature
 ```
 ## 1.2 Maak een step file aan
-Vervolgens kan je in `src/test/java/com/example/calculator` een bestand aanmaken genaamd `CalculatorSteps.java` waarin de verschillende stappen van het cucumber bestand beschreven worden met de juist step file code er bij.
+Een step file is een bestand dat de implementatie van de stappen beschrijft die in een scenario zijn gedefinieerd.
 
-Een step file in Cucumber is een bestand dat de implementatie van de stappen beschrijft die in een scenario zijn gedefinieerd.
+De step file koppelt de stappen uit de Gherkin scenario's aan de daadwerkelijke code die moet worden uitgevoerd om de tests te draaien. In een step file worden de stappen geïmplementeerd met behulp van methoden die overeenkomen met de beschrijvingen van de stappen in het Gherkin scenario.
 
-De step file koppelt de stappen uit de Gherkin scenario's aan de daadwerkelijke code die moet worden uitgevoerd om de tests te draaien. 
-In een step file worden de stappen geïmplementeerd met behulp van methoden die overeenkomen met de beschrijvingen van de stappen in het Gherkin scenario.
+In Java wordt een step file meestal geschreven als een Java-klasse met behulp van Cucumber's Java API. Deze klasse bevat methoden die zijn geannoteerd met specifieke Cucumber-annotaties, zoals @Given, @When, @Then, @And en @But, om de overeenkomst tussen de Gherkin-stap en de Java-methode aan te geven.
 
-In Java wordt een step file meestal geschreven als een Java-klasse met behulp van Cucumber's Java API. 
-Deze klasse bevat methoden die zijn geannoteerd met specifieke Cucumber-annotaties, zoals @Given, @When, @Then, @And en @But, om de overeenkomst tussen de Gherkin-stap en de Java-methode aan te geven.
-
+Maak nu een step file aan in `src/test/java/com/example/calculator`. Geef dit bestand de naam: `CalculatorSteps.java`.
 
 Aangezien ChatGPT context kan terug lezen binnen een gesprek, hoeven we geen context mee te geven aan de vraag of ChatGPT de step file wilt genereren. De Cucumber file kan deze weer zelf terug vinden in het gesprek en hier op de step file genereren.
 
+<b>
 Vraag aan ChatGPT of deze de step file wilt genereren in java.
+</b>
 
+## 1.3 Calculator applicatie
 
+Tot slot, om de cucumber testen te laten slagen is de java code nodig voor de calculator zelf. Dit kan je doen op de zelfde manier als bij opdracht 1.1 & 1.2.
 
-[//]: # (Dan gaan we nu aan de slag met Github Copilot. Github Copilot is ook een language model net als ChatGPT, echter is Copilot meer gebaseert op code completion dan voor teksten schrijven.)
-
-[//]: # (Het mooie aan Copilot is dat je het op verschillende manieren kan gebruiken. Je kan een stuk code schrijven die afgemaakt wordt door Copilot, maar je kan ook in een regel comentaar neerzetten wat voor functionaliteit wilt hebben en dan kan Copilot dit ook genereren.)
-
-[//]: # (Copilot kan ook context van een project meenemen in het genereren van de code. Zo worden de juist codeconventions meegenomen.)
-
-[//]: # ()
-[//]: # (Om de juiste stepfile te genereren maak een commentaar regel aan binnen de class die je net hebt aangemaakt.)
-
-[//]: # (`// Create the methods for the my_feature.feature file`. Vervolgens kan je door op `Tab` te drukken de code accepteren.)
-
-[//]: # ()
-[//]: # (Het is ook mogelijk dat de code niet correct is, dan kan je via de Github Copilot extension andere versies van de code vinden.)
-
-[//]: # (![img.png]&#40;../static/img/img.png&#41;)
-
-
-## Opdracht 1.3
-
-Tot slot, om de cucumber testen te laten slagen is de java code nodig voor de calculator zelf. Dit kan je doen op de zelfde manier als bij opdracht 1.2.
-Doordat ChatGPT al weet welke context er beschikbaar is, kan deze gelijk de java code genereren.
 
 Maak eerst een nieuw Java-bestand aan in je project voor de Calculator-klasse. Plaats het onder `src/main/java/com/example` met de bestandsnaam `Calculator.java`.
 
 Vervolgens kan je de Java code die door ChatGPT is gegenereerd kopieeren en plakken in de `Calculator.java`
 
-[//]: # (Zodra je de test code hebt geschreven kan je een nieuw bestand aanmaken voor de Calculator code.)
-
-[//]: # (Dit kan je ook doen aan de hand van Github Copilot. Maak een bestand aan onder het pad `src/main/java/com/examples/calculator` genaamd `Calculator.java`.)
-
-[//]: # (Geef aan in het commentaar `// Create the calculator methods used in the test`. Dit moet er voor zorgen dat de code gegenereerd word.)
-
-
-## Opdracht 1.4
+## 1.4 run test
 Om te kijken of de testen nu slagen kan je de Cucumber test file uitvoeren door rechter muisknop te drukken op de `calculator.feature` en op `run feature: calculator` te drukken.
 
 Als alles in een keer goed gaat heb je nu geen faalden testen. Echter bestaat er een mogelijkheid dat er toch iets fout gaat. 
 Als dit fout gaat kan je proberen om de foutmelding in ChatGPT te geven samen met de methode waar het fout gaat. Dan kan ChatGPT dit in sommige gevallen oplossen.
 Zo niet? Vraag iemand met een the/experts. shirt om wat hulp.
+
+## 1.5 Uitbreiden
+Herhaal bovenstaande stappen en voeg extra functionaliteit toe aan de calculator voor de volgende 6 requirements.
+
+-Exponentiation: The calculator should offer a method for raising a number to a given power, including fractional and negative exponents.
+
+-Square root: The calculator should have a method for calculating the square root of a given number, handling both positive and negative input values.
+
+-Factorial: The calculator should provide a method for calculating the factorial of a non-negative integer.
+
+-Logarithms: The calculator should include methods for calculating natural logarithms (base e) and common logarithms (base 10) of positive numbers.
+
+-Trigonometry: The calculator should offer methods for calculating sine, cosine, and tangent of angles, with support for both radians and degrees.
+
+-Memory functions: The calculator should have methods for storing, recalling, and clearing a value in its memory, allowing users to perform more complex calculations with ease.
