--- a/docs/2.voorbereidingen.md
+++ b/docs/2.voorbereidingen.md
@@ -4,13 +4,19 @@ sidebar_position: 2
 
 # Voorbereidingen
 
+## ChatGPT account
+Maak een account aan op [ChatGPT](https://chat.openai.com/)
+
 ##  Project aanmaken in Intellij
 - Geef je project een naam en kies voor de optie Maven bij Build system
+
+## Java installeren
+- Installeer Java voor [Windows](https://java.tutorials24x7.com/blog/how-to-install-java-17-on-windows) of [MacOs](https://www.codejava.net/java-se/install-oracle-jdk-17-on-macos)
 
 ##  Maven installeren
 - Installeer [Maven](https://dlcdn.apache.org/maven/maven-3/3.9.1/binaries/apache-maven-3.9.1-bin.zip) als je dat nog niet gedaan hebt en voeg het toe aan je Path variablen.
 
-Weet je niet hoe je Maven installeert volg dan de stappen in de [link](https://phoenixnap.com/kb/install-maven-windows)
+Weet je niet hoe je Maven installeert volg dan de stappen in de link voor [Windows](https://phoenixnap.com/kb/install-maven-windows) en [MacOs](https://www.digitalocean.com/community/tutorials/install-maven-mac-os)
 
 ##  Plugins in Intellij installeren
 - Gherkin
